<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainApp"
    android:scrollbars="horizontal">

    <Button
        android:id="@+id/settingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/options" />

    <AutoCompleteTextView
        android:id="@+id/editTextIngredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingButton"
        android:completionThreshold="3"
        android:hint="@string/editTextIngredientHint" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextIngredient"
        android:inputType="number"
        android:hint="@string/editTextWeightHint"
        android:autofillHints="Waga" />

    <TextView
        android:id="@+id/textSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/editTextWeight"
        android:text="@string/sum" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSum"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:text="@string/addButtonText" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:text="@string/removeButtonText" />

    <GridLayout
        android:id="@+id/gridLayoutColumnsNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="1"
        android:columnCount="4"
        android:layout_below="@+id/removeButton"
        android:padding="15dp"
        android:clipToPadding="true">

        <TextView
            android:id="@+id/textViewItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="textStart"
            android:layout_columnSpan="1"
            android:text="@string/column_value_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:layout_columnSpan="1"
            android:text="@string/column_weight_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewUricAcidContentForWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="center"
            android:layout_columnSpan="1"
            android:text="@string/column_acid_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewUricAcidContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textAlignment="textEnd"
            android:layout_columnSpan="1"
            android:text="@string/column_acid_content_on_name"
            android:textColor="@color/black" />

    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientList"
        android:layout_below="@id/gridLayoutColumnsNames"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:padding="15dp"
        android:scrollbars="vertical" />

</RelativeLayout>